--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         id="info.protonet.imageresizer" version="0.1.1">
   <name>Image Resizer</name>
   <description>Plugin for resizing images only with the uri of the image.</description>
