--- a/plugin.xml
+++ b/plugin.xml
@@ -41,7 +41,7 @@
   </platform>
   
   <platform name="windows">
-        <js-module src="src/windows/ImageResizerProxy.js" name="ImageResizer">
+        <js-module src="src/windows/ImageResizerProxy.js" name="ImageResizerProxy">
             <merges target="" />
         </js-module>
         <framework src="src/windows/ImageResizer.winmd" custom="true"/>
