--- a/plugin.xml
+++ b/plugin.xml
@@ -45,5 +45,6 @@
             <merges target="" />
         </js-module>
         <framework src="src/windows/ImageResizerNative.winmd" custom="true" target="windows"/>
+		<framework src="src/windows/ImageResizerNative.pri" custom="true" target="windows"/>
   </platform>
 </plugin>
