trying class library version

--- a/plugin.xml
+++ b/plugin.xml
@@ -44,7 +44,6 @@
         <js-module src="src/windows/ImageResizerProxy.js" name="ImageResizerProxy">
             <merges target="" />
         </js-module>
-        <framework src="src/windows/ImageResizerNative.winmd" custom="true" target="windows"/>
-		<framework src="src/windows/ImageResizerNative.pri" custom="true" target="windows"/>
+        <framework src="src/windows/ImageResizer/ImageResizerNativeLibrary/ImageResizerNativeLibrary.csproj" custom="true" target="windows"/>
   </platform>
 </plugin>
