revert to WinRT implementation

--- a/src/windows/ImageResizer/ImageResizerNativeLibrary/ImageResizerNativeLibrary.csproj
+++ b/src/windows/ImageResizer/ImageResizerNativeLibrary/ImageResizerNativeLibrary.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{628BC26A-7B50-4945-8A5A-5292036EAB12}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>winmdobj</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ImageResizerNative</RootNamespace>
     <AssemblyName>ImageResizer</AssemblyName>
