base 64 support for android, including input as base64

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JoschkaSchulz/cordova-plugin-image-resizer"
+    "url": "https://github.com/kdcro101/cordova-plugin-image-resizer.git"
   },
   "keywords": [
     "ecosystem:cordova",
@@ -27,7 +27,7 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/JoschkaSchulz/cordova-plugin-image-resizer/issues"
+    "url": "https://github.com/kdcro101/cordova-plugin-image-resizer/issues"
   },
-  "homepage": "https://github.com/JoschkaSchulz/cordova-plugin-image-resizer#readme"
+  "homepage": "https://github.com/kdcro101/cordova-plugin-image-resizer#readme"
 }
