Android - Add fixRotation option to normalize rotation for e.g. browsers/webviews that aren't exif rotation aware

--- a/plugin.xml
+++ b/plugin.xml
@@ -25,6 +25,8 @@
     </config-file>
 
     <source-file src="src/android/ImageResizer.java" target-dir="src/info/protonet/imageresizer" />
+	<preference name="ANDROID_EXIFINTERFACES_VERSION" default="27.+"/>
+	<framework src="com.android.support:exifinterface:$ANDROID_EXIFINTERFACES_VERSION"/>
   </platform>
 
   <platform name="ios">
