--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordova-plugin-image-resizer",
-  "version": "0.1.1",
+  "name": "cordova-plugin-simple-image-resizer",
+  "version": "0.2.0",
   "description": "Plugin for resizing images only with the uri of the image.",
   "cordova": {
-    "id": "info.protonet.imageresizer",
+    "id": "cordova-plugin-simple-image-resizer",
     "platforms": [
       "ios",
       "android"
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kdcro101/cordova-plugin-image-resizer.git"
+    "url": "git+https://github.com/JoschkaSchulz/cordova-plugin-image-resizer"
   },
   "keywords": [
     "ecosystem:cordova",
@@ -27,7 +27,7 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kdcro101/cordova-plugin-image-resizer/issues"
+    "url": "https://github.com/JoschkaSchulz/cordova-plugin-image-resizer/issues"
   },
-  "homepage": "https://github.com/kdcro101/cordova-plugin-image-resizer#readme"
+  "homepage": "https://github.com/JoschkaSchulz/cordova-plugin-image-resizer#readme"
 }
