--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordova-plugin-simple-image-resizer",
+  "name": "cordova-plugin-image-resizer",
   "version": "0.2.0",
   "description": "Plugin for resizing images only with the uri of the image.",
   "cordova": {
-    "id": "cordova-plugin-simple-image-resizer",
+    "id": "info.protonet.imageresizer",
     "platforms": [
       "ios",
       "android"
